tests/accept/listcompr03.lc
a :: [(Float,Float)]
a = [(k*!x*!y,x+!y)|let k = 1.0,x <- [1.0, k], y <- [1.0, 1.0]]

main :: Bool
main = case a of
         [(1.0,2.0),(1.0,2.0),(1.0,2.0),(1.0,2.0)] -> True