tests/reject/listcompr01.lc
--isZero :: Float -> Bool
--isZero 0.0 = True
--isZero _ = False

a :: [Float]
a = [x*!y|x <- [1.0,2.0], y <- [1.0,2.0]],x/=y]

main :: Bool
main = case b of
         [0.0,1.0] -> True
